--- a/Mobile/Mobile/Info.plist
+++ b/Mobile/Mobile/Info.plist
@@ -6,5 +6,13 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+    
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
+
+
 </dict>
 </plist>
